testsuite/vhdl/parser_rules/test_data/expression_failure/expression_failure_002.expected
expression_failure/expression_failure_002.input:2:4: parse error: Test Suite Full Match Error! Unparsed input left!
-5 mod -3
   ^
